--- a/404.html
+++ b/404.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Single Page Apps for GitHub Pages</title>
+    <meta name="description" content="mondo風の問題を自作できるサイトです" />
+    <title>SAKUMONDO</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
